<?xml version="1.0" encoding="UTF-8"?>

        <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    //actionbar

    -<RelativeLayout android:layout_height="70dp" android:layout_width="match_parent" android:layout_marginTop="20dp" android:paddingTop="10dp" android:background="@color/orange_main" android:id="@+id/my_top_actonbar">

    <ImageButton android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_marginTop="15dp" android:background="@color/orange_main" android:id="@+id/hotsearch_back" android:src="@drawable/back" android:scaleType="centerInside" android:layout_marginLeft="30dp" android:layout_marginBottom="15dp" android:layout_alignParentLeft="true"/>

    <ImageView android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_marginTop="15dp" android:background="@color/orange_main" android:id="@+id/hotsearch_search" android:src="@drawable/search" android:scaleType="centerInside" android:layout_marginBottom="15dp" android:layout_marginRight="30dp" android:layout_alignParentRight="true"/>

    <EditText android:layout_height="match_parent" android:layout_width="match_parent" android:layout_marginTop="10dp" android:background="@drawable/hotsearch_bg" android:id="@+id/hotsearch_et" android:layout_marginLeft="18dp" android:layout_marginBottom="10dp" android:layout_marginRight="18dp" android:layout_toLeftOf="@id/hotsearch_search" android:layout_toRightOf="@id/hotsearch_back" android:textColorHint="@color/white" android:gravity="center" android:hint="输入商家或食物名称"/>

</RelativeLayout>


    -<LinearLayout android:orientation="vertical" android:layout_height="95dp" android:layout_width="match_parent" android:background="@color/white">


    -<LinearLayout android:layout_height="35dp" android:layout_width="match_parent" android:gravity="center_vertical">

    <ImageView android:layout_height="30dp" android:layout_width="30dp" android:src="@drawable/hot_search" android:scaleType="centerInside" android:layout_marginLeft="30dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10dp" android:textSize="18sp" android:textColor="@color/dark" android:text="热门搜索"/>

</LinearLayout>


    -<LinearLayout android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="center_horizontal" android:layout_weight="1">

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_1" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_2" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_3" android:layout_margin="5dp"/>

</LinearLayout>


    -<LinearLayout android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="center_horizontal" android:layout_weight="1">

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_4" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_5" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_6" android:layout_margin="5dp"/>

</LinearLayout>

</LinearLayout>


    -<LinearLayout android:orientation="vertical" android:layout_height="95dp" android:layout_width="match_parent" android:background="@color/white">


    -<LinearLayout android:layout_height="35dp" android:layout_width="match_parent" android:gravity="center_vertical">

    <ImageView android:layout_height="25dp" android:layout_width="25dp" android:src="@drawable/lishisousuo" android:scaleType="centerInside" android:layout_marginLeft="30dp" android:layout_marginRight="5dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:textSize="18sp" android:textColor="@color/dark" android:text="历史搜索"/>

    <Button android:layout_height="20dp" android:layout_width="match_parent" android:background="#ffffff" android:id="@+id/clear_record" android:layout_marginRight="70dp" android:gravity="right" android:textSize="16sp" android:textColor="#c6c6c6" android:text="清空记录"/>

</LinearLayout>


    -<LinearLayout android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="center_horizontal" android:layout_weight="1">

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="蒸饺" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_history_2" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_history_3" android:layout_margin="5dp"/>

</LinearLayout>


    -<LinearLayout android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="center_horizontal" android:layout_weight="1">

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_history_4" android:layout_margin="5dp"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_5" android:layout_margin="5dp" android:visibility="invisible"/>

    <TextView android:layout_height="match_parent" android:layout_width="75dp" android:background="@color/grey" android:gravity="center" android:textColor="@color/white" android:text="@string/search_hot_6" android:layout_margin="5dp" android:visibility="invisible"/>

</LinearLayout>

</LinearLayout>

</LinearLayout>